New fixtures Update fixtures files. Add new tests.